--- a/.github/workflows/docker-image-build-and-push-manually.yml
+++ b/.github/workflows/docker-image-build-and-push-manually.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/short-time-code:latest ${{ secrets.DOCKER_HUB_USERNAME }}/short-time-code:$(date +%s)
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/short-time-code:latest
           file: ./release.Dockerfile
 
       - name: Logout from Docker Hub
